--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ h2, h3 {
   text-align: center;
   margin-bottom: 20px;
   font-weight: bold;
-  color: #333;
+  color: #3f6b51;
 }
 
 .form-container {
